Risoluzione issues livello Medium.