@@ -4,7 +4,6 @@ import com.example.progettoispw.model.Card;
 import com.example.progettoispw.model.Type;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class TypeFilter extends SearchDecorator{
 
@@ -19,6 +18,6 @@ public class TypeFilter extends SearchDecorator{
     public List<Card> executeSearch() {
 
         List<Card> list = super.executeSearch();
-        return list.stream().filter(c-> c.getTipo().equals(type)).collect(Collectors.toList());
+        return list.stream().filter(c-> c.getTipo().equals(type)).toList();
     }
 }
